objects/Assignment_Standard__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Library__c</fullName>
        <label>Assignment Library</label>
        <referenceTo>Assignment_Lib__c</referenceTo>
        <relationshipLabel>Assignment/Standards</relationshipLabel>
        <relationshipName>Assignment_Standards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Assignment/Standards</relationshipLabel>
        <relationshipName>Assignment_Standards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assignment/Standard</label>
    <nameField>
        <displayFormat>AS-{00}</displayFormat>
        <label>Assignment/Standard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment/Standards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>